# phosphor-ted-sensor-monitor

./: README.md  meson.build  phosphor-ted-sensor-monitor.service.in
src/: main.cpp  tedSensorMonitor.hpp
